# cpp98posix-framework

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  project.cppcheck
App/src/: main.cpp
Framework/: Makefile
Framework/src/Collections/: List.h
Framework/src/Communication/: ISocket.h  Request.h  TcpEventArgs.cpp  TcpEventArgs.h  TcpSocket.cpp  TcpSocket.h
Framework/src/Core/: Application.cpp
Framework/src/Event/: EventHandler.h  IObserver.h  Observer.h
Framework/src/Logging/: LogEventArgs.h
Framework/src/Threading/: IThread.h  Thread.cpp  Thread.h  ThreadData.h
Framework/src/UI/: Console.cpp
Framework/src/Utilities/: String.cpp
src/: client.cpp  main.cpp  main.cpp.orig  server.cpp
src/Collections/: Dictionary.h  List.h
src/Communication/: Request.cpp  TcpEventArgs.h  TcpSocket.h
src/Core/: Application.cpp  Application.h
src/Event/: EventArgs.h  IEventArgs.h  IObservable.h  Observable.cpp  Observable.h  Observer.cpp
src/Logging/: ILogger.h  LogEventArgs.cpp  LogEventArgs.h  TcpLogger.cpp  TcpLogger.h
src/Networking/: Host.h  ISocket.h  Request.cpp  Request.h  Response.cpp  Response.h
src/Networking/Tcp/: EventArgs.cpp  EventArgs.h  Listener.cpp  Listener.h  Socket.cpp  Socket.h
src/Threading/: Cond.cpp  Cond.h  Mutex.cpp  Mutex.h  Queue.h  Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h  Worker.h
src/UI/: Console.cpp  Console.h
src/Utilities/: String.cpp  String.h
test/: main.cpp
test/Core/: Application.test.cpp
test/Utilities/: String.test.cpp
